# contribution-overlays

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/commit-style/: SKILL.md
projects/spring-io-initializr/: README.md  overlay.toml
projects/spring-io-initializr/notes/: 001_log_fix_gh-1742.md
projects/spring-io-initializr/overlay/: AGENTS.md  PROJECT_GENERATION_MANUAL_VERIFICATION.md
projects/spring-io-initializr/overlay/.codex/: config.toml
projects/spring-io-initializr/overlay/.codex/rules/: default.rules
src/contribution_overlays/: __init__.py  cli.py  config.py  core.py  errors.py  exclude.py  git.py  paths.py  status.py
tests/: test_config.py  test_core.py
