[project]
name = "contribution-overlays"
version = "0.1.0"
description = "Manage project-specific contribution instruction overlays for external repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
contribution-overlays = "contribution_overlays.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true
